2007-02-20  Enrico Troeger  <enrico.troeger@uvena.de>

 * src/sci_cb.c, src/sci_cb.c:
   Made auto_close_bracket() static and auto close brackets only when
   auto completion of constructs is enabled (closes #1665015).
 * doc/geany.1.in: Fixed typo.
 * geany.glade, src/interface.c: Improved tooltip for auto completion.


2007-02-20  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/document.c:
   Remove the yellow error line marker also when using 'Remove Error
   Indicators'.


2007-02-19  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/search.c: Fixed compiler warning.
 * src/project.c, src/win32.c, src/win32.h:
   Added Windows dialogs for Project new and Project open actions.
   Fixed some mem leaks in the Windows code.


2007-02-19  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/templates.c, src/templates.h, src/highlighting.c,
   src/callbacks.c, src/callbacks.h, src/filetypes.c, src/main.c:
   Support filetype templates for all filetypes (scan
   ~/.geany/templates/filetype.* at startup).
   Default filetype templates are now created in init_ft_templates().
   Move on_new_with_template() to templates.c.
   Move on_filetype_change() to filetypes.c.


2007-02-18  Enrico Tröger  <enrico.troeger@uvena.de>

 * data/filetypes.ruby, src/highlighting.c:
   Added several missing style types for filetype Ruby.
 * doc/geany.docbook: Added notice about contributing to the docs
                      (patch from John Gabriele, thanks).


2007-02-17  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/ui_utils.c:
   Scroll Compiler and Messages window in view when using Next Error
   or Next Message.
 * src/search.c:
   Add Mark button as a Find All option in the Find dialog.
 * src/interface.c, src/callbacks.c, src/callbacks.h, src/document.c,
   geany.glade:
   Add Remove Markers item to the Document menu.
   Remove Error Indicators no longer removes current tag marker.


2007-02-16  Nick Treleaven  <nick.treleaven@btinternet.com>
